--- a/sass/breakpoints/_960up.scss
+++ b/sass/breakpoints/_960up.scss
@@ -35,11 +35,8 @@ footer {
 	width: 960px;
 }
 #exhibit-pages {
-	max-width: 220px;
+	width: 220px;
 	margin-right: 20px;
-	h4, li {
-		padding: 0, 10px;
-	}
 }
 .exhibits #content > h1:first-of-type,
 #exhibit-blocks,
